<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/std_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="111dp"
            android:text="@string/std_wgt"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/std_weight"
            android:layout_marginTop="69dp"
            android:layout_toStartOf="@+id/calculate_button"
            android:text="@string/gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/male"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignEnd="@+id/radioGroup2"
                android:layout_gravity="right"
                android:text="@string/female"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="28dp"
            android:text="@string/height"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/calculate_button"
            android:layout_alignTop="@+id/textView2"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText2"
            android:layout_alignBottom="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:text="@string/feet"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignStart="@+id/radioGroup"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:inputType="number"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/std_weight"
            android:layout_alignTop="@+id/editText2"
            android:text="@string/inches"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:text="@string/calculate"
            android:textSize="22sp" />
    </RelativeLayout>
</LinearLayout>
